Prevent click-through or scrolling the content area when quick-jump is active

--- a/app/styles/views/_quick-jump.scss
+++ b/app/styles/views/_quick-jump.scss
@@ -66,6 +66,7 @@
 
   &.active {
     background-color: $overlay-transparent-background;
+    pointer-events: all;
 
     .bar {
       background-color: $white;
